--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -58,6 +58,7 @@ jobs:
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
+          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
 
@@ -140,6 +141,7 @@ jobs:
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
+          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
 
@@ -222,6 +224,7 @@ jobs:
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
+          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
 
@@ -304,6 +307,7 @@ jobs:
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
+          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
 
