--- a/.github/workflows/android-space.yml
+++ b/.github/workflows/android-space.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Android Build CI
+name: Android Build CI (Space)
 
 # Controls when the workflow will run
 on: [workflow_dispatch]
