--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -40,20 +40,12 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install lime 7.9.0 --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install lime-samples --quiet
           haxelib install openfl 9.1.0 --quiet
-          haxelib install openfl-samples --quiet
           haxelib install actuate --quiet
-          haxelib install box2d --quiet
-          haxelib install layout --quiet
-          haxelib install systools --quiet
           haxelib --never install flixel --quiet
-          haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
-          haxelib install flixel-demos --quiet
-          haxelib install flixel-templates --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
@@ -123,20 +115,12 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install lime 7.9.0 --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install lime-samples --quiet
           haxelib install openfl 9.1.0 --quiet
-          haxelib install openfl-samples --quiet
           haxelib install actuate --quiet
-          haxelib install box2d --quiet
-          haxelib install layout --quiet
-          haxelib install systools --quiet
           haxelib --never install flixel --quiet
-          haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
-          haxelib install flixel-demos --quiet
-          haxelib install flixel-templates --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
@@ -206,20 +190,12 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install lime 7.9.0 --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install lime-samples --quiet
           haxelib install openfl 9.1.0 --quiet
-          haxelib install openfl-samples --quiet
           haxelib install actuate --quiet
-          haxelib install box2d --quiet
-          haxelib install layout --quiet
-          haxelib install systools --quiet
           haxelib --never install flixel --quiet
-          haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
-          haxelib install flixel-demos --quiet
-          haxelib install flixel-templates --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
@@ -287,22 +263,14 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib git lime https://github.com/mcagabe19/lime.git
+          haxelib install lime 7.9.0 --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install lime-samples --quiet
           haxelib install openfl 9.1.0 --quiet
-          haxelib install openfl-samples --quiet
           haxelib install actuate --quiet
-          haxelib install box2d --quiet
-          haxelib install layout --quiet
-          haxelib install systools --quiet
           haxelib --never install flixel --quiet
-          haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
-          haxelib install flixel-demos --quiet
-          haxelib install flixel-templates --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
