--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -33,6 +33,7 @@ jobs:
           haxelib install flixel-addons --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
           echo "${{github.run_id}}" > VERSION
