--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -18,26 +18,29 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.1.5
 
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hxcpp > /dev/null
+          haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0 --quiet
           haxelib install openfl 9.1.0 --quiet
-          haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
-          haxelib install flixel-ui --quiet
-          haxelib install hscript --quiet
-          haxelib install flixel-addons --quiet
+          haxelib install actuate 1.8.9 --quiet
+          haxelib --never install flixel 4.9.0 --quiet
+          haxelib install flixel-tools 1.4.4 --quiet
+          haxelib install flixel-ui 2.3.3 --quiet
+          haxelib install hscript 2.4.0 --quiet
+          haxelib install flixel-addons 2.10.0 --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
+          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
-          haxelib git extension-webm https://github.com/KadeDev/extension-webm.git
-          haxelib run lime rebuild extension-webm html5
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
-          echo "${{github.run_id}}" > VERSION
+
+      - name: Create Version Tag
+        run: echo "${{github.run_id}}" > VERSION
 
       - name: Compile
         run: haxelib run lime build html5 -Ddom -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
