--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -11,6 +11,10 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        build: [release, debug]
+
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -48,10 +52,10 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
 
       - name: Compile
-        run: haxelib run lime build html5 -debug -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build html5 -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
 
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
-          name: build
-          path: export/release/html5/bin
+          name: build-${{ matrix.build }}
+          path: export/${{ matrix.build }}/html5/bin
