--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,7 +10,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -18,7 +18,7 @@ jobs:
       - name: Setup xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '13.1.0'
+          xcode-version: '11'
 
       - name: Setup Java JDK
         uses: actions/setup-java@main
