--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -11,6 +11,10 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        build: [release, debug]
+
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -41,20 +45,11 @@ jobs:
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
 
-      - name: Compile (Release)
-        run: haxelib run lime build html5 -release -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
-
-      - name: Compile (Debug)
-        run: haxelib run lime build html5 -debug -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
+      - name: Compile
+        run: haxelib run lime build html5 -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
 
       - name: Publish Artifact (Release)
         uses: actions/upload-artifact@main
         with:
-          name: build-release
-          path: export/release/html5/bin
-
-      - name: Publish Artifact (Debug)
-        uses: actions/upload-artifact@main
-        with:
-          name: build-debug
-          path: export/debug/html5/bin
+          name: build-${{ matrix.build }}
+          path: export/${{ matrix.build }}/html5/bin
