--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -41,7 +41,7 @@ jobs:
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
-          sudo mv ./*.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
+          mv ./*.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
