--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -38,7 +38,7 @@ jobs:
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
+          haxelib git hxjs-fengari https://github.com/kevinresol/hxjs-fengari.git
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
