--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -1,29 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+# Web Lua
+# haxelib git hxjs-fengari https://github.com/kevinresol/hxjs-fengari.git
+# haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
 
 name: HTML5 Build CI
-
-# Controls when the workflow will run
 on: [workflow_dispatch]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     name: Build
     runs-on: ubuntu-20.04
     strategy:
       matrix:
         build: [release, debug]
-
     steps:
       - name: Checkout
         uses: actions/checkout@main
-
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
-
       - name: Install Haxelib
         run: |
           sudo apt-get install -qq -o=Dpkg::Use-Pty=0 g++-multilib gcc-multilib
@@ -38,18 +32,13 @@ jobs:
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git hxjs-fengari https://github.com/kevinresol/hxjs-fengari.git
-          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
-
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-
       - name: Compile
         run: haxelib run lime build html5 -${{ matrix.build }} -D no-compilation -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
-
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
