--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -1,40 +1,34 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Android Build CI (Fast)
 
-# Controls when the workflow will run
 on: [workflow_dispatch]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  buildarmv7:
-    name: Armv7
+  build:
+    name: Build
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        build: [release, debug]
+        arch: [arm64, armv7, 32, 64]
     steps:
       - name: Checkout
         uses: actions/checkout@main
-
       - name: Setup Android NDK
         uses: nttld/setup-ndk@main
         id: setup-ndk
         with:
           ndk-version: r21e
-
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
           distribution: zulu
           java-version: 12
-
       - name: Setup Android SDK
         uses: android-actions/setup-android@main
-
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
-
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
@@ -53,10 +47,8 @@ jobs:
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
-
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-
       - name: Setup Lime
         run: |
           haxelib run lime setup -alias -y
@@ -66,248 +58,17 @@ jobs:
           haxelib run lime config ANDROID_SETUP true
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
       - name: Compile
-        run: haxelib run lime build android -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -armv7 --app-version="4.0.0-${{ github.run_id}}"
-
+        run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -${{ matrix.arch }} --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish To transfer.sh
         run: |
-         cd export/release/android/bin/app/build/outputs/apk/debug
-         mv steveolderidk-debug.apk steveolderidk-armv7.apk
-         tar -I 'xz -9' -cvf steveolderidk-armv7.tar.xz steveolderidk-armv7.apk
-         curl -v --upload-file steveolderidk-armv7.tar.xz https://transfer.sh/steveolderidk-armv7.tar.xz
+         cd export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug
+         mv steveolderidk-debug.apk steveolderidk-${{ matrix.arch }}.apk
+         tar -I 'xz -9' -cvf steveolderidk-${{ matrix.arch }}.tar.xz steveolderidk-${{ matrix.arch }}.apk
+         curl -v --upload-file steveolderidk-armv7.tar.xz https://transfer.sh/steveolderidk-${{ matrix.arch }}.tar.xz
          cd ../../../../../../../../..
-
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
           name: buildarmv7
-          path: export/release/android/bin/app/build/outputs/apk/debug/steveolderidk-armv7.apk
-  buildarm64:
-    name: Arm64
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@main
-        id: setup-ndk
-        with:
-          ndk-version: r21e
-
-      - name: Setup Java JDK
-        uses: actions/setup-java@main
-        with:
-          distribution: zulu
-          java-version: 12
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@main
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: 4.2.5
-
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib install lime 7.9.0 --quiet
-          haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install openfl 9.1.0 --quiet
-          haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
-          haxelib install flixel-ui --quiet
-          haxelib install hscript --quiet
-          haxelib install flixel-addons --quiet
-          haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
-          haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
-          haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
-          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
-          haxelib set openfl 9.1.0
-          haxelib set lime 7.9.0
-
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib run lime config ANDROID_SDK $ANDROID_HOME
-          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
-          haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib run lime config ANDROID_SETUP true
-        env:
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
-      - name: Compile
-        run: haxelib run lime build android -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -arm64 --app-version="4.0.0-${{ github.run_id}}"
-
-      - name: Publish To transfer.sh
-        run: |
-         cd export/release/android/bin/app/build/outputs/apk/debug
-         mv steveolderidk-debug.apk steveolderidk-arm64.apk
-         tar -I 'xz -9' -cvf steveolderidk-arm64.tar.xz steveolderidk-arm64.apk
-         curl -v --upload-file steveolderidk-arm64.tar.xz https://transfer.sh/steveolderidk-arm64.tar.xz
-         cd ../../../../../../../../..
-
-      - name: Publish Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: buildarm64
-          path: export/release/android/bin/app/build/outputs/apk/debug/steveolderidk-arm64.apk
-  build86:
-    name: x86
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@main
-        id: setup-ndk
-        with:
-          ndk-version: r21e
-
-      - name: Setup Java JDK
-        uses: actions/setup-java@main
-        with:
-          distribution: zulu
-          java-version: 12
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@main
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: 4.2.5
-
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib install lime 7.9.0 --quiet
-          haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install openfl 9.1.0 --quiet
-          haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
-          haxelib install flixel-ui --quiet
-          haxelib install hscript --quiet
-          haxelib install flixel-addons --quiet
-          haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
-          haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
-          haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
-          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
-          haxelib set openfl 9.1.0
-          haxelib set lime 7.9.0
-
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib run lime config ANDROID_SDK $ANDROID_HOME
-          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
-          haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib run lime config ANDROID_SETUP true
-        env:
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
-      - name: Compile
-        run: haxelib run lime build android -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -32 --app-version="4.0.0-${{ github.run_id}}"
-
-      - name: Publish To transfer.sh
-        run: |
-         cd export/release/android/bin/app/build/outputs/apk/debug
-         mv steveolderidk-debug.apk steveolderidk-x86.apk
-         tar -I 'xz -9' -cvf steveolderidk-x86.tar.xz steveolderidk-x86.apk
-         curl -v --upload-file steveolderidk-x86.tar.xz https://transfer.sh/steveolderidk-x86.tar.xz
-         cd ../../../../../../../../..
-
-      - name: Publish Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: build86
-          path: export/release/android/bin/app/build/outputs/apk/debug/steveolderidk-x86.apk
-  build8664:
-    name: x86_64
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@main
-        id: setup-ndk
-        with:
-          ndk-version: r21e
-
-      - name: Setup Java JDK
-        uses: actions/setup-java@main
-        with:
-          distribution: zulu
-          java-version: 12
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@main
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: 4.2.5
-
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib git lime https://github.com/mcagabe19/lime --quiet
-          haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
-          haxelib install openfl 9.1.0 --quiet
-          haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
-          haxelib install flixel-ui --quiet
-          haxelib install hscript --quiet
-          haxelib install flixel-addons --quiet
-          haxelib git faxe https://github.com/uhrobots/faxe.git
-          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
-          haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
-          haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
-          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
-          haxelib set openfl 9.1.0
-          haxelib set lime 7.9.0
-
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib run lime config ANDROID_SDK $ANDROID_HOME
-          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
-          haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib run lime config ANDROID_SETUP true
-        env:
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
-      - name: Rebuild Lime (X86_64)
-        run: haxelib run lime rebuild android -64 -release -nocolor -verbose -nocffi
-
-      - name: Compile
-        run: haxelib run lime build android -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -64 --app-version="4.0.0-${{ github.run_id}}"
-
-      - name: Publish To transfer.sh
-        run: |
-         cd export/release/android/bin/app/build/outputs/apk/debug
-         mv steveolderidk-debug.apk steveolderidk-x86_64.apk
-         tar -I 'xz -9' -cvf steveolderidk-x86_64.tar.xz steveolderidk-x86_64.apk
-         curl -v --upload-file steveolderidk-x86_64.tar.xz https://transfer.sh/steveolderidk-x86_64.tar.xz
-         cd ../../../../../../../../..
-
-      - name: Publish Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: build8664
-          path: export/release/android/bin/app/build/outputs/apk/debug/steveolderidk-x86_64.apk
+          path: export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug/steveolderidk-${{ matrix.arch }}.apk
