--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         build: [release, debug]
-        arch: [arm64, armv7, 32, 64]
+        arch: [arm64, armv7, 32]
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -65,10 +65,77 @@ jobs:
          cd export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug
          mv steveolderidk-debug.apk steveolderidk-${{ matrix.arch }}.apk
          tar -I 'xz -9' -cvf steveolderidk-${{ matrix.arch }}.tar.xz steveolderidk-${{ matrix.arch }}.apk
-         curl -v --upload-file steveolderidk-armv7.tar.xz https://transfer.sh/steveolderidk-${{ matrix.arch }}.tar.xz
+         curl -v --upload-file steveolderidk-${{ matrix.arch }}.tar.xz https://transfer.sh/steveolderidk-${{ matrix.arch }}.tar.xz
          cd ../../../../../../../../..
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
           name: buildarmv7
           path: export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug/steveolderidk-${{ matrix.arch }}.apk
+    name: Build 64
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        build: [release, debug]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main
+      - name: Setup Android NDK
+        uses: nttld/setup-ndk@main
+        id: setup-ndk
+        with:
+          ndk-version: r21e
+      - name: Setup Java JDK
+        uses: actions/setup-java@main
+        with:
+          distribution: zulu
+          java-version: 12
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@main
+      - name: Setup Haxe
+        uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.2.5
+      - name: Install Haxelib
+        run: |
+          haxelib setup ~/haxelib
+          haxelib install lime 7.9.0 --quiet
+          haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
+          haxelib install openfl 9.1.0 --quiet
+          haxelib install actuate --quiet
+          haxelib --never install flixel --quiet
+          haxelib install flixel-ui --quiet
+          haxelib install hscript --quiet
+          haxelib install flixel-addons --quiet
+          haxelib git faxe https://github.com/uhrobots/faxe.git
+          haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
+          haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
+          haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
+          haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
+          haxelib set openfl 9.1.0
+          haxelib set lime 7.9.0
+      - name: Create Version Tag
+        run: echo "${{github.run_id}}" > VERSION
+      - name: Setup Lime
+        run: |
+          haxelib run lime setup -alias -y
+          haxelib run lime config ANDROID_SDK $ANDROID_HOME
+          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
+          haxelib run lime config JAVA_HOME $JAVA_HOME
+          haxelib run lime config ANDROID_SETUP true
+        env:
+          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+      - name: Compile
+        run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -64 --app-version="4.0.0-${{ github.run_id}}"
+      - name: Publish To transfer.sh
+        run: |
+         cd export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug
+         mv steveolderidk-debug.apk steveolderidk-64.apk
+         tar -I 'xz -9' -cvf steveolderidk-64.tar.xz steveolderidk-64.apk
+         curl -v --upload-file steveolderidk-64.tar.xz https://transfer.sh/steveolderidk-64.tar.xz
+         cd ../../../../../../../../..
+      - name: Publish Artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: buildarmv7
+          path: export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug/steveolderidk-64.apk
