--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install lime 7.9.0 --quiet
+          haxelib git lime https://github.com/mcagabe19/lime --quiet
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-fastspeed > /dev/null
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
