--- a/.github/workflows/android-space.yml
+++ b/.github/workflows/android-space.yml
@@ -36,7 +36,7 @@ jobs:
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-lessspace > /dev/null
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
+          haxelib --never install flixel 4.11.0 --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
@@ -46,6 +46,7 @@ jobs:
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
+          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -104,7 +105,7 @@ jobs:
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-lessspace > /dev/null
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
+          haxelib --never install flixel 4.11.0 --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
@@ -114,6 +115,7 @@ jobs:
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
+          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
