--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -30,7 +30,7 @@ jobs:
           haxelib install box2d --quiet
           haxelib install layout --quiet
           haxelib install systools --quiet
-          haxelib --never install flixel --quiet
+          haxelib --never install flixel 4.11.0 --quiet
           haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
@@ -41,10 +41,10 @@ jobs:
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
+          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-
       - name: Compile
         run: haxelib run lime build mac -64 -${{ matrix.build }} -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
