--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,12 +14,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@main
-
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
-
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
@@ -28,7 +26,7 @@ jobs:
           haxelib install openfl 9.1.0 --quiet
           haxelib install openfl-samples --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
+          haxelib --never install flixel 4.11.0 --quiet
           haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
@@ -38,14 +36,12 @@ jobs:
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc.git
           haxelib set openfl 9.1.0
+          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
-
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-
       - name: Compile
         run: haxelib run lime build windows -${{ matrix.arch }} -${{ matrix.build }} -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize --app-version="4.0.0-${{ github.run_id}}"
-
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
