--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -26,7 +26,7 @@ jobs:
           haxelib install lime 7.9.0 --quiet
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel 4.11.0 --quiet
+          haxelib --never install flixel --quiet
           haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
@@ -34,7 +34,6 @@ jobs:
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
