--- a/.github/workflows/android-space.yml
+++ b/.github/workflows/android-space.yml
@@ -37,7 +37,7 @@ jobs:
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-lessspace > /dev/null
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel 4.11.0 --quiet
+          haxelib --never git flixel https://github.com/mcagabe19/flixel-5.0.1.git
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
@@ -47,7 +47,6 @@ jobs:
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -62,13 +61,6 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
         run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -${{ matrix.arch }} --app-version="4.0.0-${{ github.run_id}}"
-      - name: Publish To transfer.sh
-        run: |
-         cd export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug
-         mv steveolderidk-debug.apk steveolderidk-${{ matrix.arch }}.apk
-         tar -I 'xz -9' -cvf steveolderidk-${{ matrix.arch }}.tar.xz steveolderidk-${{ matrix.arch }}.apk
-         curl -v --upload-file steveolderidk-${{ matrix.arch }}.tar.xz https://transfer.sh/steveolderidk-${{ matrix.arch }}.tar.xz
-         cd ../../../../../../../../..
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -107,7 +99,7 @@ jobs:
           haxelib git hxcpp https://github.com/mcagabe19/hxcpp-lessspace > /dev/null
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel 4.11.0 --quiet
+          haxelib --never git flixel https://github.com/mcagabe19/flixel-5.0.1.git
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
@@ -117,7 +109,6 @@ jobs:
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git
           haxelib git extension-videoview https://github.com/MAJigsaw77/extension-videoview.git
           haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -132,13 +123,6 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
         run: haxelib run lime build android -${{ matrix.build }} -D no-compilation -D luajit_static -D macro-times -D analyzer-optimize -64 --app-version="4.0.0-${{ github.run_id}}"
-      - name: Publish To transfer.sh
-        run: |
-         cd export/${{ matrix.build }}/android/bin/app/build/outputs/apk/debug
-         mv steveolderidk-debug.apk steveolderidk-64.apk
-         tar -I 'xz -9' -cvf steveolderidk-64.tar.xz steveolderidk-64.apk
-         curl -v --upload-file steveolderidk-64.tar.xz https://transfer.sh/steveolderidk-64.tar.xz
-         cd ../../../../../../../../..
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
