--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -22,26 +22,16 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
           haxelib install lime 7.9.0 --quiet
-          haxelib install lime-samples --quiet
           haxelib install openfl 9.1.0 --quiet
-          haxelib install openfl-samples --quiet
-          haxelib install newgrounds --quiet
           haxelib install actuate --quiet
-          haxelib install box2d --quiet
-          haxelib install layout --quiet
-          haxelib install systools --quiet
-          haxelib --never install flixel 4.11.0 --quiet
-          haxelib install flixel-tools --quiet
+          haxelib --never git flixel https://github.com/mcagabe19/flixel-5.0.1.git
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
-          haxelib install flixel-demos --quiet
-          haxelib install flixel-templates --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git linc_luajit https://github.com/sirox228/linc_luajit.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
           haxelib set lime 7.9.0
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
